# agentic-log-analysis

./: .gitignore  README.md  docker-compose.yml  otel-collector-config.yaml
loki_mcp_server/: loki_client.py  pyproject.toml  server.py
lookup_models/: README.md  pyproject.toml
lookup_models/lookup_models/: __init__.py  models.py
lookup_service/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  run.sh
lookup_service/data/contacts/: consolidated_contacts.json
lookup_service/data/products/: consolidated_products.json
lookup_service/data/quotes/: consolidated_quotes.json
lookup_service/lookup_service/: __init__.py  logging_config.py  main.py  models.py
lookup_service/lookup_service/routes/: __init__.py  contacts.py  products.py  quotes.py
lookup_service/lookup_service/services/: __init__.py  contact_service.py  product_service.py  quote_service.py
nginx/: Dockerfile  nginx.conf  opentelemetry_module.conf  server.conf
quote_api_service/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  grafana.ini  main.py  otel-collector-config.yaml  pyproject.toml  requirements.txt  run.sh
quote_api_service/app/: main.py
quote_api_service/app/client/: base_client.py  contact_client.py  product_client.py  quote_client.py
quote_api_service/app/common/: quote_utils.py
quote_api_service/app/config/: common.py  logging_config.py  settings.py  telemetry_config.py
quote_api_service/app/core/: config.py
quote_api_service/app/database/: database.py
quote_api_service/app/middleware/: correlation.py
quote_api_service/app/models/: quote.py
quote_api_service/app/routes/: __init__.py  health.py  quotes.py
quote_api_service/app/schemas/: quote.py
quote_api_service/app/service/: quote_service.py
quote_api_service/app/services/: quote_service.py
quote_api_service/app/transformer/: quote_transformer.py
quote_api_service/examples/contacts/: contacts.json
quote_api_service/examples/fallbacks/: legal_fallbacks.json
quote_api_service/examples/products/: products.json
quote_api_service/examples/quotes/: quote_bundle.json  quote_hardware.json  quote_professional_services.json  quote_standard.json  quote_subscription.json
