[project]
name = "loki-mcp-server"
version = "0.1.0"
description = "Model COntext Protocol server for Loki"
authors = [
    {name = "Rahul Radhakrishnan",email = "59603500+rahulr-codr@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "mcp[cli] (>=1.4.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
