[project]
name = "lookup_models"
version = "0.1.0"
description = "Models for the lookup service"
authors = []
dependencies = [
    "pydantic>=2.0.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["lookup_models"] 