[project]
name = "quote-api-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "lookup-models",
    "opentelemetry-distro>=0.52b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.31.0",
    "opentelemetry-instrumentation-fastapi>=0.52b0",
    "opentelemetry-instrumentation-logging>=0.52b0",
    "structlog>=25.2.0",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
lookup-models = { path = "../lookup_models" }
